--- a/views/public/html/availableCandidates.html
+++ b/views/public/html/availableCandidates.html
@@ -726,6 +726,8 @@
               </div>
     <script>
           document.addEventListener("DOMContentLoaded", function() {
+            localStorage.clear();
+
             populateCandidatesTable();
         });
         // Function to fetch candidate data and populate the table
