--- a/views/public/html/contract-due.html
+++ b/views/public/html/contract-due.html
@@ -717,6 +717,7 @@ function generateExcelFile() {
                 window.open(`./view-candidate.html?id=${id}`, '_blank');
             }
             document.addEventListener('DOMContentLoaded',async()=>{
+              localStorage.clear();
 
            
                 let nationalityData = [];
