--- a/views/public/html/payslips.html
+++ b/views/public/html/payslips.html
@@ -63,6 +63,8 @@
     <!-- Custom Script -->
     <script>
 document.addEventListener("DOMContentLoaded", function () {
+    localStorage.clear();
+
     const urlParams = new URLSearchParams(window.location.search);
     const contractId = urlParams.get('contractId');
 
