--- a/views/public/html/reminder.html
+++ b/views/public/html/reminder.html
@@ -603,6 +603,8 @@
           </div>
         <script>
           document.addEventListener('DOMContentLoaded', async () => {
+            localStorage.clear();
+
               const dateFilterForm = document.getElementById('dateFilterForm');
               const startDateInput = document.getElementById('startDate');
               const endDateInput = document.getElementById('endDate');
