--- a/views/public/html/seaservice.html
+++ b/views/public/html/seaservice.html
@@ -761,6 +761,8 @@
 }
    
                     document.addEventListener('DOMContentLoaded', async function () {
+                      localStorage.clear();
+
 
   
                         const seaServiceList = document.getElementById('sea-service-list');
