--- a/views/public/html/seaservicetable.html
+++ b/views/public/html/seaservicetable.html
@@ -707,6 +707,8 @@
         
 
                 document.addEventListener('DOMContentLoaded', async function (e) {
+                  localStorage.clear();
+
                     e.preventDefault();
                     const urlParams = new URLSearchParams(window.location.search);
     
