--- a/views/public/html/status.html
+++ b/views/public/html/status.html
@@ -744,6 +744,8 @@ function viewCandidate(id) {
 }
 
 document.addEventListener('DOMContentLoaded', async () => {
+  localStorage.clear();
+
                     fetchData();
                     createCompanyDropdown();
 
