--- a/views/public/html/birthday.html
+++ b/views/public/html/birthday.html
@@ -617,6 +617,8 @@
     
         <script>
             document.addEventListener('DOMContentLoaded', function () {
+              localStorage.clear();
+
                 const token = localStorage.getItem('token');
                 const dateInput = document.getElementById('date');
                 const submitBtn = document.getElementById('submitBtn');
