--- a/views/public/html/engine-form.html
+++ b/views/public/html/engine-form.html
@@ -1089,6 +1089,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script>
 window.onload = function() {
+  localStorage.clear();
+
     // Display an alert asking for Candidate ID
     let candidateId = prompt("Please enter your Candidate ID to continue:");
 
