--- a/views/public/html/galley-form.html
+++ b/views/public/html/galley-form.html
@@ -1067,7 +1067,7 @@ async function generateAndSavePDF(doc) {
 
     // Send the PDF data to the server-side endpoint using Axios
     try {
-        const response = await axios.post('https://nemo.ivistaz.co/upload/evaluation', formData, {
+        const response = await axios.post('https://nsnemo.com/upload/evaluation', formData, {
             headers: {
                 'Content-Type': 'multipart/form-data'
             }
