--- a/views/public/html/passwordReset.html
+++ b/views/public/html/passwordReset.html
@@ -25,7 +25,7 @@
       const userPassword = document.getElementById('password').value;
 
       try {
-        const response = await axios.post('https://nemo.ivistaz.co/user/temp-login', {
+        const response = await axios.post('https://nsnemo.com/user/temp-login', {
           userName,
           userPassword
         });
