--- a/views/public/html/payslips.html
+++ b/views/public/html/payslips.html
@@ -72,7 +72,7 @@ document.addEventListener("DOMContentLoaded", function () {
         return;
     }
 
-    axios.get(`https://nemo.ivistaz.co/candidate/get-payslips/${contractId}`)
+    axios.get(`https://nsnemo.com/candidate/get-payslips/${contractId}`)
         .then(response => {
             console.log(response.data); // Check the response structure
             populateTable(response.data.payslips); // Pass the correct data
