--- a/views/public/html/reminder.html
+++ b/views/public/html/reminder.html
@@ -618,7 +618,7 @@
               // Function to fetch discussion reminders based on date filters
               async function fetchData(startDate, endDate) {
                   try {
-                      const url = `https://nemo.ivistaz.co/candidate/reminder?startDate=${startDate}&endDate=${endDate}`;
+                      const url = `https://nsnemo.com/candidate/reminder?startDate=${startDate}&endDate=${endDate}`;
                       const response = await axios.get(url);
                       renderDiscussionReminders(response.data.discussions);
                   } catch (error) {
@@ -694,7 +694,7 @@
     // Send request to update logged status to false
     const userId = localStorage.getItem('userId');
     if (userId) {
-      axios.put(`https://nemo.ivistaz.co/user/${userId}/logout`)
+      axios.put(`https://nsnemo.com/user/${userId}/logout`)
         .then(response => {
           console.log('Logged out successfully');
         })
