--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -774,11 +774,13 @@
         <!-- Layout container -->
         <div class="layout-page">
           <!-- Navbar -->
-          
+         <span class="text-center bg-black"> <span class="text-success">𝗛𝗮𝗽𝗽𝘆</span> <span style="color: white;">𝗶𝗻𝗱𝗲𝗽𝗲𝗻𝗱𝗲𝗻𝗰𝗲</span> <span class="text-warning">𝗱𝗮𝘆</span> </span>
+
           <nav
             class="layout-navbar container-fluid navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme pe-0"
             id="layout-navbar"
           >
+          
             <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
               <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
                 <i class="bx bx-menu bx-sm"></i>
@@ -789,6 +791,7 @@
               <!-- Search -->
               <div class="icon-container me-3 ">
                 <i class="bx" id="icon"></i>
+                
             </div>
               <div class="navbar-nav  w-100">
 
@@ -807,7 +810,9 @@
                  
               Nemo & Nautilus Shipping 
 
+             
                  <div class="ms-3" style="display: none;">Done By Sibbenanthan K for Ivistaz (Nov 20th 2023 - June 15th)</div>
+                 
               </div>
               
              
