--- a/views/public/html/loginpage.html
+++ b/views/public/html/loginpage.html
@@ -114,10 +114,14 @@
   </div>
   
     <div class="container-xxl">
+      
       <div class="authentication-wrapper authentication-basic container-p-y">
+        
         <div class="authentication-inner">
+          
           <!-- Register -->
           <div class="card">
+
             <div class="card-body">
               <!-- Logo -->
               <div class="app-brand justify-content-center mb-3 rounded-3">
@@ -209,7 +213,10 @@
                 </a>
               </p> -->
             </div>
+            
           </div>
+          <span class="text-center bg-black rounded-2"> <span class="text-success">𝗛𝗮𝗽𝗽𝘆</span> <span style="color: white;">𝗶𝗻𝗱𝗲𝗽𝗲𝗻𝗱𝗲𝗻𝗰𝗲</span> <span class="text-warning">𝗱𝗮𝘆</span> </span>
+
           <!-- /Register -->
         </div>
         
