--- a/views/public/html/loginpage.html
+++ b/views/public/html/loginpage.html
@@ -215,7 +215,7 @@
             </div>
             
           </div>
-          <span class="text-center bg-black rounded-2"> <span class="text-success">𝗛𝗮𝗽𝗽𝘆</span> <span style="color: white;">𝗶𝗻𝗱𝗲𝗽𝗲𝗻𝗱𝗲𝗻𝗰𝗲</span> <span class="text-warning">𝗱𝗮𝘆</span> </span>
+          <span class="text-center bg-black rounded-2"> <span class="text-success">𝗛𝗮𝗽𝗽𝘆 </span> <span style="color: white;">𝗥𝗮𝗸𝘀𝗵𝗮</span> <span class="text-warning">𝗕𝗮𝗻𝗱𝗵𝗮𝗻</span> </span>
 
           <!-- /Register -->
         </div>
