--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -774,7 +774,7 @@
         <!-- Layout container -->
         <div class="layout-page">
           <!-- Navbar -->
-          <span class="text-center bg-black rounded-2"> <span class="text-success">𝗛𝗮𝗽𝗽𝘆 </span> <span style="color: white;">𝗥𝗮𝗸𝘀𝗵𝗮</span> <span class="text-warning">𝗕𝗮𝗻𝗱𝗵𝗮𝗻</span> </span>
+          <span class="text-center bg-black"> <span class="text-success">𝗛𝗮𝗽𝗽𝘆 </span> <span style="color: white;">𝗥𝗮𝗸𝘀𝗵𝗮</span> <span class="text-warning">𝗕𝗮𝗻𝗱𝗵𝗮𝗻</span> </span>
 
           <nav
             class="layout-navbar container-fluid navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme pe-0"
