--- a/views/public/html/add-userdata.html
+++ b/views/public/html/add-userdata.html
@@ -578,7 +578,7 @@
                 <h5 class="card-title mb-4 pb-2">Add User</h5>
         
                 <form id="user-form">
-                  <div class="row g-3">
+                  <div class="row ">
                       <div class="col-md-4">
                           <div class="mb-3 row">
                               <label for="f_name" class="col-md-4 col-form-label">First Name:</label>
@@ -640,23 +640,6 @@
                       </div>
                       
                     
-                    
-                      <div class="col-md-4">
-                          <div class="mb-3 row">
-                              <label for="user_created_date" class="col-md-4 col-form-label">Created By:</label>
-                              <div class="col-md-8">
-                                  <input type="text" disabled placeholder="Enter Created By" id="user_created_date" class="form-control" required>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-md-4">
-                        <div class="mb-3 row">
-                            <label for="master_create" class="col-md-4 col-form-label">Master:</label>
-                            <div class="col-md-8">
-                                <input type="text" disabled placeholder="Master Account" disabled id="master_create" class="form-control" required>
-                            </div>
-                        </div>
-                    </div>
 
                     <div class="col-md-4" style="visibility: hidden;">
                       <div class="mb-3 row">
@@ -681,7 +664,7 @@
                   </div>
                   </div>
               
-                  <div class="row mt-0 pt-0  p-3 mb-3">
+                  <div class="row mt-0 pt-0  p-3 mt-5">
                     <h5 class="mb-5">Permissions</h5>
                     
                     <div class="col-md-6">
@@ -793,18 +776,16 @@
                     </div>
                     </div>
                 </div>
-                
-            
-                <div class="col-4 border rounded-3 p-3 mb-3" style="width: 200px;height:58px">
-                    <div class="form-check ">
-                        <input type="checkbox" id="disable_user">  Disable User?
-                    </div>
-                </div>
-            
                 <div class="card-footer text-end pt-0 pe-0 pb-1">
 
                   <button class="btn btn-success" type="submit">Add User</button>
+                  
                 </div>
+            
+                
+                
+            
+              
               </form>
               
             </div>
@@ -823,7 +804,31 @@
                 </div>
             </div>
         </div>
-        
+        <div class="col-4 border border-warning rounded-3 p-3 mb-3" style="width: 200px;height:58px; visibility: collapse;" >
+          <div class="form-check ">
+              <input type="checkbox" id="disable_user">  Disable User?
+          </div>
+      </div>
+        <div class="border d-flex justify-content-between p-3 pb-0 mt-0 mb-0" style="visibility: hidden;">
+          <small style="color: #269af2;">These input boxes are for Technical Reference. <br>Please Ignore</small>
+
+          <div class="col-md-4">
+              <div class="mb-3 row">
+                  <label for="user_created_date" class="col-md-4 col-form-label">Created By:</label>
+                  <div class="col-md-8">
+                      <input type="text" disabled placeholder="Enter Created By" id="user_created_date" class="form-control" required>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+            <div class="mb-3 row">
+                <label for="master_create" class="col-md-4 col-form-label">Master:</label>
+                <div class="col-md-8">
+                    <input type="text" disabled placeholder="Master Account" disabled id="master_create" class="form-control" required>
+                </div>
+            </div>
+        </div>
+        </div>
           
             
                     <!-- /Account -->
