--- a/views/public/html/add-vendor.html
+++ b/views/public/html/add-vendor.html
@@ -651,37 +651,22 @@
                               </div>
                           </div>
                       </div>
-                      
-                    
-                    
-                      <div class="col-md-4">
-                          <div class="mb-3 row">
-                              <label for="user_created_date" class="col-md-4 col-form-label">Created By:</label>
-                              <div class="col-md-8">
-                                  <input type="text" disabled placeholder="Enter Created By" id="user_created_date" class="form-control" required>
-                              </div>
-                          </div>
-                      </div>
                       <div class="col-md-4">
                         <div class="mb-3 row">
-                            <label for="master_create" class="col-md-4 col-form-label">Master:</label>
+                            <label for="user_vendor" class="col-md-4 col-form-label">Vendor:</label>
                             <div class="col-md-8">
-                                <input type="text" disabled placeholder="Master Account" disabled id="master_create" class="form-control" required>
+                                <select class="form-select" id="user_vendor">
+                                    <option value="">Select Vendor</option>
+                                </select>
                             </div>
                         </div>
                     </div>
+                      
+                    
+                    
 
                     <div class="container mt-3">
-                      <div class="col-md-4">
-                          <div class="mb-3 row">
-                              <label for="user_vendor" class="col-md-4 col-form-label">Vendor:</label>
-                              <div class="col-md-8">
-                                  <select class="form-select" id="user_vendor">
-                                      <option value="">Select Vendor</option>
-                                  </select>
-                              </div>
-                          </div>
-                      </div>
+               
                   </div>
 
                     <div class="col-md-4" style="visibility: hidden;">
@@ -788,7 +773,7 @@
                 </div>
                 
             
-                <div class="col-4 border rounded-3 p-3 mb-3" style="width: 200px;height:58px">
+                <div class="col-4 border rounded-3 p-3 mb-3" style="width: 200px;height:58px;visibility: hidden;">
                     <div class="form-check ">
                         <input type="checkbox" id="disable_user">  Disable Vendor?
                     </div>
@@ -818,7 +803,24 @@
         </div>
         
           
-            
+        <div style="visibility: hidden;">
+          <div class="col-md-4">
+              <div class="mb-3 row">
+                  <label for="user_created_date" class="col-md-4 col-form-label">Created By:</label>
+                  <div class="col-md-8">
+                      <input type="text" disabled placeholder="Enter Created By" id="user_created_date" class="form-control" required>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+            <div class="mb-3 row">
+                <label for="master_create" class="col-md-4 col-form-label">Master:</label>
+                <div class="col-md-8">
+                    <input type="text" disabled placeholder="Master Account" disabled id="master_create" class="form-control" required>
+                </div>
+            </div>
+        </div>
+        </div>
                     <!-- /Account -->
                       <!-- / Content -->
 
