--- a/views/public/html/add-vesseltype.html
+++ b/views/public/html/add-vesseltype.html
@@ -577,7 +577,7 @@
                 
                <form id="vessel-form" class="card">
     <div style="display: flex; align-items:center;">
-        <h5 class="card-header" style="flex: 1;">Add Vessel</h5>
+        <h5 class="card-header" style="flex: 1;">Add Vessel Type</h5>
         <div class="dropdown">
             <button type="button" class="btn btn-primary btn-icon rounded-pill dropdown-toggle hide-arrow me-3 mb-0" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="bx bx-dots-vertical-rounded"></i>
@@ -591,7 +591,7 @@
                     <div class="row">
                       <div class="col  mb-3">
                           <div class="d-flex align-items-center">
-                              <label for="vessel_name" class="form-label col-auto me-3  mb-0">Vessel Name:</label>
+                              <label for="vessel_name" class="form-label col-auto me-3  mb-0">Vessel Type :</label>
                               <input type="text" class="form-control" id="vessel_name" placeholder="Enter vessel name" required>
                           </div>
                       </div>
@@ -599,7 +599,7 @@
                   
                   </div>
                   <div class="card-footer text-end mt-0 pt-0">
-                      <button type="submit" class="btn btn-primary">ADD VESSEL</button>
+                      <button type="submit" class="btn btn-primary">ADD VESSEL TYPE</button>
                   </div>
               </form>
               </div>
@@ -610,7 +610,7 @@
                 
                 <div class="card mt-3">
                   <div style="display: flex; align-items:center;">
-                      <h5 class="card-header" style="flex: 1;">Add Vessel Type</h5>
+                      <h5 class="card-header" style="flex: 1;">Add Vessel</h5>
                       <div class="dropdown">
                           <button type="button" class="btn btn-primary btn-icon rounded-pill dropdown-toggle hide-arrow me-3 mb-0" data-bs-toggle="dropdown" aria-expanded="false">
                               <i class="bx bx-dots-vertical-rounded"></i>
@@ -628,11 +628,13 @@
                           </div>
                       </div>
                       <div class="mb-3 row">
-                          <label for="vessel_type" class="col-md-2 col-form-label">Vessel Type:</label>
-                          <div class="col-md-10">
-                              <input type="text" class="form-control" id="vessel_type" placeholder="Enter vessel type" required>
-                          </div>
-                      </div>
+                        <label for="vessel_type" class="col-md-2 col-form-label">Vessel Type:</label>
+                        <div class="col-md-10">
+                            <select class="form-select" id="vessel_type" required>
+                                <!-- Options will be dynamically added here -->
+                            </select>
+                        </div>
+                    </div>
                       <div class="mb-3 row">
                         <label for="vsl_company" class="col-md-2 col-form-label">Company:</label>
                         <div class="col-md-10">
