--- a/views/public/html/x.html
+++ b/views/public/html/x.html
@@ -85,7 +85,7 @@
 
     </style>
 </head>
-<body class="container">
+<body class="">
     <div id="printableArea" >
       <div class="container">
         <div class="static-row mb-3" >
@@ -98,7 +98,7 @@
                 </p>
             </div>
             <div class="info-col">
-                <p class="small">
+                <p class="small p-2 pt-4">
                     FORM NO: OFF 47B<br />
                     REVISION NO: 00<br />
                     DATE: 17/08/2023
@@ -144,30 +144,30 @@
             </div>
 
             <div class="form-row mb-3">
-                <div class="col-md-6">
-                    <div class="card">
-                        <div class="card-header">Communication</div>
-                        <div class="card-body">
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" name="englishLevel" id="englishGood" value="good">
-                                <label class="form-check-label" for="englishGood">Good</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" name="englishLevel" id="englishSatisf" value="satisfactory">
-                                <label class="form-check-label" for="englishSatisf">Satisfactory</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" name="englishLevel" id="englishPoor" value="poor">
-                                <label class="form-check-label" for="englishPoor">Poor</label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2 text-center card bg-light">
-                    <p class="mt-2">BMI</p>
-                    <input type="text" id="bmi" name="bmi" class="form-control border" />
-                </div>
-            </div>
+              <div class="col-md-8">
+                  <div class="card">
+                      <div class="card-header">Communication</div>
+                      <div class="card-body">
+                          <div class="form-check form-check-inline">
+                              <input class="form-check-input" type="checkbox" name="englishLevel" id="englishGood" value="good">
+                              <label class="form-check-label" for="englishGood">Good</label>
+                          </div>
+                          <div class="form-check form-check-inline">
+                              <input class="form-check-input" type="checkbox" name="englishLevel" id="englishSatisf" value="satisfactory">
+                              <label class="form-check-label" for="englishSatisf">Satisfactory</label>
+                          </div>
+                          <div class="form-check form-check-inline">
+                              <input class="form-check-input" type="checkbox" name="englishLevel" id="englishPoor" value="poor">
+                              <label class="form-check-label" for="englishPoor">Poor</label>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-2 text-center  bg-light">
+                  <p class="mt-2">BMI</p>
+                  <input type="text" id="bmi" name="bmi" class="form-control border" />
+              </div>
+          </div>
 
             <div class="card mb-3">
                 <div class="card-header">
@@ -248,6 +248,7 @@
                   type="text"
                   class="form-control w-50"
                   placeholder="Enter nationality"
+                  id="newNationality"
                 />
               </div>
             </div>
@@ -257,8 +258,8 @@
         <div class=" mt-4">
   <form>
     <div class="row mb-3">
-      <div class="col-md-6 ">
-        <div class="border border-black-1 h-100">
+      <div class="col-md-6 mb-5">
+        <div class="border border-black-1 ">
           <div class="bg-light p-3">
             <h5 for="cargosHandled" class="form-label">CARGOS HANDLED</h5>
             <select class="form-select" id="cargosHandled">
@@ -268,7 +269,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 mt-5">
         <div class="border border-black-1">
           <div class="bg-light p-3">
             <h5 for="automationExperience" class="form-label">AUTOMATION EXPERIENCE (indicate number of vessels)</h5>
@@ -282,34 +283,34 @@
 
 
 
-  <div class="">
+  <div class="mt-4">
     <div class="row mb-3">
    <div class="container">
-  <div class="row h-100">
-    <div class="col-md-6 h-100">
-     <div class="row h-100">
-    <div class="col h-100">
-      <div class="border border-black-1  h-100">
-        <div class="bg-light p-4 h-100">
+  <div class="row ">
+    <div class="col-md-6 ">
+     <div class="row ">
+    <div class="col ">
+      <div class="border border-black-1  ">
+        <div class="bg-light p-4 ">
           <h5 class="form-label">CONTAINER EXPERIENCE/TEU (indicate number of vessels)</h5>
           <div class="row row-cols-2 g-2 ">
             <div class="col">
-              <input type="text" class="form-control" placeholder="< 1000">
+              <input type="text" class="form-control" placeholder="< 1000" id="ceInput1">
             </div>
             <div class="col">
-              <input type="text" class="form-control" placeholder="1000 - 3000">
+              <input type="text" class="form-control" placeholder="1000 - 3000" id="ceInput2">
             </div>
             <div class="col">
-              <input type="text" class="form-control" placeholder="3000 - 6000">
+              <input type="text" class="form-control" placeholder="3000 - 6000" id="ceInput3">
             </div>
             <div class="col">
-              <input type="text" class="form-control" placeholder="6000 - 10000">
+              <input type="text" class="form-control" placeholder="6000 - 10000" id="ceInput4">
             </div>
             <div class="col">
-              <input type="text" class="form-control" placeholder="10000 - 15000">
+              <input type="text" class="form-control" placeholder="10000 - 15000" id="ceInput5">
             </div>
             <div class="col">
-              <input type="text" class="form-control" placeholder=">15000">
+              <input type="text" class="form-control" placeholder=">15000" id="ceInput6">
             </div>
           </div>
         </div>
@@ -318,9 +319,9 @@
   </div>
     </div>
  
-    <div class="col-md-6 mb-3 h-100">
-      <div class="border border-black-1 h-100">
-        <div class="bg-light p-3 h-100">
+    <div class="col-md-6 mb-3 mt-4">
+      <div class="border border-black-1 ">
+        <div class="bg-light p-3 ">
           <h5 class="form-label">MAIN ENGINE EXPERIENCE (indicate number of vessels)</h5>
           <div class="row row-cols-1 row-cols-md-3 ">
             <div class="col">
@@ -452,9 +453,9 @@
         </div>
       </div>
     </div>
-  </form>
+  
 
-    <div class="container mt-5" style="padding-top: 100px;">
+    <div class="" >
           <div class="bg-gray-100 p-4 border border-dark-1 rounded-1  bg-light mb-4">
     <h3 class=" ">PRACTICAL SKILLS</h3>
     <div class="row ">
@@ -462,14 +463,14 @@
 Number of Contracts in Ranks
     </div>
     <div class="col border p-2">
-       <input class="form-control">
+       <input class="form-control" id="psInput1">
     </div>
 </div>
 <div class="row ">
     <div class="col-5 border pt-3">
 Type or size of the vessels served    </div>
     <div class="col border p-2">
-       <input class="form-control">
+       <input class="form-control" id="psInput2">
     </div>
 </div>
 <div class="row ">
@@ -477,7 +478,7 @@ Type or size of the vessels served    </div>
 Last contract sign off date
     </div>
     <div class="col border p-2">
-       <input class="form-control">
+       <input class="form-control" id="psInput3">
     </div>
 </div>
 <div class="row ">
@@ -485,7 +486,7 @@ Last contract sign off date
 Type of main engine exp.
     </div>
     <div class="col border p-2">
-       <input class="form-control">
+       <input class="form-control"  id="psInput4">
     </div>
 </div>
 <div class="row ">
@@ -493,7 +494,7 @@ Type of main engine exp.
 Type of AUX engine exp.
     </div>
     <div class="col border p-2">
-       <input class="form-control">
+       <input class="form-control"  id="psInput5">
     </div>
 </div>
 <div class="row ">
@@ -501,7 +502,7 @@ Type of AUX engine exp.
 Cargo cranes/gear (marker) exp.
     </div>
     <div class="col border p-2">
-       <input class="form-control">
+       <input class="form-control"  id="psInput6">
     </div>
 </div>
 <div class="row ">
@@ -509,7 +510,7 @@ Cargo cranes/gear (marker) exp.
 Type of Cargo carried
     </div>
     <div class="col border p-2">
-       <input class="form-control">
+       <input class="form-control"  id="psInput7">
     </div>
 </div>
 <div class="row ">
@@ -517,7 +518,7 @@ Type of Cargo carried
 Type of Cargo pumps(tankers)
     </div>
     <div class="col border p-2">
-       <input class="form-control">
+       <input class="form-control" id="psInput8">
     </div>
 </div>
 <div class="row ">
@@ -525,7 +526,7 @@ Type of Cargo pumps(tankers)
 Trading Area(limited/WW)
     </div>
     <div class="col border p-2">
-       <input class="form-control">
+       <input class="form-control"  id="psInput9">
     </div>
 </div>
 <div class="row ">
@@ -533,7 +534,7 @@ Trading Area(limited/WW)
 Mixed crew (nationalities) exp.
     </div>
     <div class="col border p-2">
-       <input class="form-control">
+       <input class="form-control"  id="psInput10">
     </div>
 </div>
 <div class="row ">
@@ -541,7 +542,7 @@ Mixed crew (nationalities) exp.
 ECDIS experience in previous 12 months
     </div>
     <div class="col border p-2">
-       <input class="form-control">
+       <input class="form-control"  id="psInput11">
     </div>
 </div>
 <div class="row ">
@@ -549,7 +550,7 @@ ECDIS experience in previous 12 months
 PSC experience
     </div>
     <div class="col border p-2">
-       <input class="form-control">
+       <input class="form-control"  id="psInput12">
     </div>
 </div>
 <div class="row ">
@@ -557,13 +558,13 @@ PSC experience
 SIRE/CID experience
     </div>
     <div class="col border p-2">
-       <input class="form-control">
+       <input class="form-control"  id="psInput13">
     </div>
 </div>
   </div>
         <div>
 
-    <div class="container mt-5 border border-black-1 p-3">
+    <div class=" border border-black-1 p-3">
         <h4 class="mb-4">OTHER PRACTICAL EXPERIENCE (tick the appropriate box)</h4>
         <form style="font-size:12px">
             <div class="row">
@@ -778,21 +779,22 @@ SIRE/CID experience
             </div>
 
             
-            <div class="mt-5 mb-3" style="padding-top: 100px;">
+            <div class="mt-5 mb-3" >
               <label class="block mb-2">Last Employer – Reason for Leaving</label>
               <input
                 type="text"
                 placeholder="Enter reason for leaving"
                 class="w-full p-2 border rounded"
+                id="leavingLast"
               />
             </div>
             
 
-           <div class="container mt-4 bg-light p-4 border border-dark-1">
+           <div class=" mt-4 bg-light p-4 border border-dark-1">
           <h4 class="text-danger mb-3">INTERVIEWER COMMENTS</h4>
 
           <div class="mb-3">
-            <textarea class="form-control" rows="4"></textarea>
+            <textarea class="form-control" rows="4" id="commentsInt"></textarea>
           </div>
 
           <div class="row mb-3">
@@ -824,22 +826,25 @@ SIRE/CID experience
                 type="text"
                 class="form-control"
                 placeholder="INTERVIEWER NAME"
+                id="intName"
               />
             </div>
             <div class="col-md-4 mb-3">
               <small class="p-2">SIGNATURE:</small>
-              <input type="text" class="form-control" placeholder="SIGNATURE" />
+              <input type="text" class="form-control" placeholder="SIGNATURE" id="signNow"/>
             </div>
             <div class="col-md-4 mb-3">
               <small class="d-block">DATE:</small>
-              <input type="date" class="form-control" />
+              <input type="date" class="form-control" id="dateNow" />
             </div>
           </div>
         </div>
+        </div>
+
+      </form>
     </div>
 
-        </form>
-    </div>
+    <button id="write">Write</button>
 
     <button type="button" class="btn btn-primary no-print" onclick="printDiv('printableArea')">Print Form</button>
 
@@ -891,6 +896,60 @@ SIRE/CID experience
         }
 
         var originalContent = document.body.innerHTML; // Store the original content before printing
+
+
+        function fetchValues() {
+                // Define the IDs and their default values
+                const ids = [
+                    'fullName', 'rankApplied', 'nationality', 'telephone', 'mobile', 
+                    'qualification', 'lastContract', 'englishGood', 'englishSatisf', 
+                    'englishPoor', 'Bmi', 'Europe', 'usa', 'medSea', 'farEast', 'pgGoa', 
+                    'crewExperienceYes', 'crewExperienceNo', 'newNationality', 
+                    'cargosHandled', 'automationExperience', 'ceInput1', 'ceInput2', 
+                    'ceInput3', 'ceInput4', 'ceInput5', 'ceInput6', 'sulzer', 'sulzer_rta', 
+                    'man_bw', 'pielstick', 'mak', 'yanmar', 'bw', 'deutz', 'daihatsu', 
+                    'caterpillar', 'other', 'pumps', 'gears', 'drinkingYes', 'drinkingNo', 
+                    'medicalYes', 'medicalNo', 'psInput1', 'psInput2', 'psInput3', 
+                    'psInput4', 'psInput5', 'psInput6', 'psInput7', 'psInput8', 
+                    'psInput9', 'psInput10', 'psInput11', 'psInput12', 'psInput13', 
+                    'umsVesselsYes', 'umsVesselsNo', 'bilgeSludgeYes', 'bilgeSludegeNo', 
+                    'pmsSoftwareYes', 'pmsSoftwareNo', 'reeferContainersYes', 
+                    'reeferContainersNo', 'extraordinaryCircumstancesYes', 
+                    'extraordinaryCircumstancesNo', 'congestedPassageYes', 
+                    'congestedPassageNo', 'dryDockYes', 'dryDockNo', 'csmPlanningYes', 
+                    'csmPlanningNo', 'yardDeliveryYes', 'yardDeliveryNo', 'safetyISMYes', 
+                    'safetyISMNo', 'auditsYes', 'auditsNo', 'ecaSecaOperationYes', 
+                    'ecaSecaOperationNo', 'garbageManagementYes', 'garbageManagementNo', 
+                    'fuelChangeoverYes', 'fuelChangeoverNo', 'opeartionProceduresYes', 
+                    'operationProceduresNo', 'regulationsYes', 'regulationsNo', 
+                    'leavingLast', 'commentsInt', 'accepted', 'rejected', 'grading', 
+                    'intName', 'dateNow', 'signNow'
+                ];
+
+                // Create an object to store the values
+                const evalObject = {};
+
+                // Iterate over the IDs and fetch their values
+                ids.forEach(id => {
+                    const element = document.getElementById(id);
+                    if (element) {
+                        // Check if the element is a checkbox
+                        if (element.type === 'checkbox') {
+                            evalObject[id] = element.checked;
+                        } else {
+                            evalObject[id] = element.value;
+                        }
+                    }
+                });
+
+                return evalObject;
+            }
+
+            // Add event listener to the write button
+            document.getElementById('write').addEventListener('click', function() {
+                const evalObject = fetchValues();
+                console.log(evalObject);
+            });
     </script>
 </body>
 </html>
