--- a/views/public/html/queries.html
+++ b/views/public/html/queries.html
@@ -603,8 +603,8 @@
             <input id="edit_description" type="text" class="form-control" >
           </div>
           <div class="mb-3">
-            <label for="editstatus" class="form-label">Status</label>
-            <select id="editstatus" class="form-control" >
+            <label for="edit_status" class="form-label">Status</label>
+            <select id="edit_status" class="form-control" >
                 <option value="" disabled selected>Select status</option>
                 <option value="open">Open</option>
                 <option value="pending">Pending</option>
