--- a/views/public/html/view-country.html
+++ b/views/public/html/view-country.html
@@ -578,8 +578,9 @@
                                     <table id="country-code-list" class="table table table-striped table-bordered ">
                                         <thead>
                                             <tr>
-                                                <th scope="col">Sno</th>
-                                                <th scope="col">Country Code</th>
+                                              <th scope="col">Sno</th>
+                                              <th scope="col">Code</th>
+                                              <th scope="col">Country Code</th>
                                                 <th scope="col">Country</th>
                                                 <th scope="col">Phone Code</th>
                                             </tr>
